--- a/Storefront/Views/Artists/Index.cshtml
+++ b/Storefront/Views/Artists/Index.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<h1>Index</h1>
+@if (User.IsInRole("Admin"))
+{
+    <h3>
+        <a asp-action="Create">Create New</a>
+    </h3>
+}
+<table class="table cute-card">
     <thead>
         <tr>
             <th>
@@ -39,14 +41,14 @@
             <th>
                 @Html.DisplayNameFor(model => model.Genre)
             </th>
-            <th>@Html.Display("Admin Actions")</th>
+           
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
             <td>
-                    <a asp-action="Details" asp-route-id="@item.ArtistId">@Html.DisplayFor(modelItem => item.ArtistName)</a> |
+                    <a asp-action="Details" asp-route-id="@item.ArtistId">@Html.DisplayFor(modelItem => item.ArtistName)</a> 
             </td>
         @*    <td>
                 @Html.DisplayFor(modelItem => item.City)
@@ -68,19 +70,12 @@
             </td>*@
                 <td>
 
-                    <img src="~/img/@item.ArtistImage" class="img-fluid" alt="@item.ArtistName">
+                    <img src="~/img/@item.ArtistImage" class="img-fluid" height="250" width="250" alt="@item.ArtistName">
                 </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Genre.GenreName)
             </td>
-            <td>
-                  
-              
-                <a asp-action="Edit" asp-route-id="@item.ArtistId">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.ArtistId">Delete</a>
-               
-                
-            </td>
+         
         </tr>
 }
     </tbody>
