--- a/Storefront/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Storefront/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h2>@ViewData["Title"]</h2>
-<div class="row">
+<div class="row cute-card">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
