--- a/Storefront/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Storefront/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,11 +6,12 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
+<div class="row ">
     <div class="col-md-8 mx-auto">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
-            <hr />
+          
+            <div class="cute-card">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="Email Address" />
@@ -65,9 +66,10 @@
             </div>
 
 
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+                <button id="registerSubmit" type="submit" class="w-100 btn btn-lg cute-button">Register</button>
         </form>
     </div>
+</div>
 </div>
 
 @section Scripts {
