--- a/Storefront/Views/Administration/CreateRole.cshtml
+++ b/Storefront/Views/Administration/CreateRole.cshtml
@@ -9,7 +9,7 @@
 <form asp-action="CreateRole" method="post" class="mt-3">
     <div asp-validation-summary="All" class="text-danger"></div>
 
-    <div class="form-group row">
+    <div class="form-group row cute-card">
         <label asp-for="RoleName" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <input asp-for="RoleName" class="form-control" placeholder="Name" />
@@ -19,7 +19,7 @@
 
     <div class="form-group row">
         <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary" style="width:auto">
+            <button type="submit" class="btn cute-button" style="width:auto">
                 Create Role
             </button>
         </div>
