--- a/Storefront/Views/Administration/EditRole.cshtml
+++ b/Storefront/Views/Administration/EditRole.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Edit Role</h1>
 <form method="post" class="mt-3">
-    <div class="form-group row">
+    <div class="form-group row cute-card">
         <label asp-for="Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <input asp-for="Id" disabled class="form-control">
@@ -26,8 +26,9 @@
 
     <div class="form-group row">
         <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary">Update</button>
-            <a asp-action="ListRoles" class="btn btn-primary">Cancel</a>
+            <button type="submit" class="btn 
+">Update</button>
+            <a asp-action="ListRoles" class="btn cute-button">Cancel</a>
         </div>
     </div>
 
@@ -49,7 +50,7 @@
             }
         </div>
         <div class="card-footer">
-            <a asp-controller="Administration" asp-action="EditUsersInRole" asp-route-roleId="@Model.Id" class="btn btn-primary" style="width:auto">Add or Remove Users from this Role</a>
+            <a asp-controller="Administration" asp-action="EditUsersInRole" asp-route-roleId="@Model.Id" class="btn cute-button" style="width:auto">Add or Remove Users from this Role</a>
             
         </div>
     </div>
