--- a/Storefront/Views/Administration/EditUserRoles.cshtml
+++ b/Storefront/Views/Administration/EditUserRoles.cshtml
@@ -9,7 +9,7 @@
         <div class="card-header">
             <h2>Add or remove roles for this user</h2>
         </div>
-        <div class="card-body">
+        <div class="card-body cute-card">
             @for (int i = 0; i < Model.Count; i++)
             {
                 <div class="form-check m-1">
@@ -23,9 +23,9 @@
             }
         </div>
         <div class="card-footer">
-            <input type="submit" value="Update" class="btn btn-primary"
+            <input type="submit" value="Update" class="btn cute-button"
                    style="width:auto" />
-            <a asp-action="EditUser" asp-route-id="@ViewBag.UserId" class="btn btn-primary" style="width:auto">Cancel</a>
+            <a asp-action="EditUser" asp-route-id="@ViewBag.UserId" class="btn cute-button"  style="width:auto">Cancel</a>
         </div>
     </div>
 </form>
