--- a/Storefront/Views/Administration/EditUsersInRole.cshtml
+++ b/Storefront/Views/Administration/EditUsersInRole.cshtml
@@ -12,7 +12,7 @@
         <div class="card-header">
             <h2>Add or remove users from this role</h2>
         </div>
-        <div class="card-body">
+        <div class="card-body cute-card">
             @for (int i = 0; i < Model.Count; i++)
             {
                 <div class="form-check m-1">
@@ -26,10 +26,10 @@
             }
         </div>
         <div class="card-footer">
-            <input type="submit" value="Update" class="btn btn-primary"
+            <input type="submit" value="Update" class="btn cute-button"
                    style="width:auto" />
             <a asp-action="EditRole" asp-route-id="@roleId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
+               class="btn cute-button" style="width:auto">Cancel</a>
         </div>
     </div>
 </form>
