--- a/Storefront/Views/Administration/ListRoles.cshtml
+++ b/Storefront/Views/Administration/ListRoles.cshtml
@@ -11,32 +11,32 @@
 
 @if (Model.Any())
 {
-    <a class="btn btn-primary mb-3" style="width:auto" asp-action="CreateRole"
+    <a class="btn cute-button mb-3" style="width:auto" asp-action="CreateRole"
    asp-controller="administration">Add new role</a>
 
     foreach (var role in Model)
     {
         <div class="card mb-3">
+            <div class="card-body cute-card">
+                <h5 class="card-title">@role.Name</h5>
             <div class="card-header">
                 Role Id : @role.Id
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">@role.Name</h5>
-            </div>
             <div class="card-footer">
 
                 <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
-                    <a asp-controller="Administration" asp-action="EditRole" asp-route-id="@role.Id" class="btn btn-primary">Edit</a>
+                    <a asp-controller="Administration" asp-action="EditRole" asp-route-id="@role.Id" class="btn cute-button">Edit</a>
                     <span id="confirmDeleteSpan_@role.Id" style="display:none">
                         <span>Are you sure you want to delete?</span>
-                        <button type="submit" class="btn btn-danger">Yes</button>
-                        <a href="#" class="btn btn-primary" onclick="confirmDelete('@role.Id', false)">No</a>
+                        <button type="submit" class="btn delete-button">Yes</button>
+                        <a href="#" class="btn delete-button" onclick="confirmDelete('@role.Id', false)">No</a>
                     </span>
 
                     <span id="deleteSpan_@role.Id">
-                        <a href="#" class="btn btn-danger" onclick="confirmDelete('@role.Id', true)">Delete</a>
+                        <a href="#" class="btn delete-button" onclick="confirmDelete('@role.Id', true)">Delete</a>
                     </span>
                 </form>
+            </div>
+            </div>
             </div>
         </div>
     }
