--- a/Storefront/Views/Administration/ListUsers.cshtml
+++ b/Storefront/Views/Administration/ListUsers.cshtml
@@ -11,13 +11,13 @@
 
 @if (Model.Any())
 {
-    <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary mb-3" style="width:auto">
+    <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary cute-button mb-3" style="width:auto">
         Add new user
     </a>
 
     foreach (var user in Model)
     {
-        <div class="card mb-3">
+        <div class="card mb-3 cute-card">
             <div class="card-header">
                 User Id : @user.Id
             </div>
@@ -27,16 +27,16 @@
             <div class="card-footer">
                 
                 <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
-                    <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+                    <a asp-action="EditUser" asp-controller="Administration" asp-route-id="@user.Id" class="btn btn-primary cute-button">Edit</a>
 
                     <span id="confirmDeleteSpan_@user.Id" style="display:none">
                         <span>Are you sure you want to delete?</span>
-                        <button type="submit" class="btn btn-danger">Yes</button>
-                        <a href="#" class="btn btn-primary" onclick="confirmDelete('@user.Id', false)">No</a>
+                        <button type="submit" class="btn delete-button">Yes</button>
+                        <a href="#" class="btn cute-button" onclick="confirmDelete('@user.Id', false)">No</a>
                     </span>
 
                     <span id="deleteSpan_@user.Id">
-                        <a href="#" class="btn btn-danger" onclick="confirmDelete('@user.Id', true)">Delete</a>
+                        <a href="#" class="btn  delete-button" onclick="confirmDelete('@user.Id', true)">Delete</a>
                     </span>
                 </form>
             </div>
@@ -45,7 +45,7 @@
 }
 else
 {
-    <div class="card">
+    <div class="card cute-card">
         <div class="card-header">
             No users created yet
         </div>
@@ -53,7 +53,7 @@ else
             <h5 class="card-title">
                 Use the button below to create a user
             </h5>
-			<a asp-area="Identity" asp-page="/Account/Register" class="btn btn-primary mb-3" style="width:auto">
+			<a asp-area="Identity" asp-page="/Account/Register" class="btn cute-button mb-3" style="width:auto">
 				Add new user
 			</a>
         </div>
