--- a/Storefront/Views/Artists/Details.cshtml
+++ b/Storefront/Views/Artists/Details.cshtml
@@ -64,6 +64,13 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ArtistId">Edit</a> |
+    @if (User.IsInRole("Admin"))
+    {
+        <td>
+            <a asp-action="Edit" asp-route-id="@Model.ArtistId">Edit</a> |
+        <a asp-action="Delete" asp-route-id="@Model.ArtistId">Delete</a>
+  "
+    </td>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
