--- a/Storefront/Views/Details.cshtml
+++ b/Storefront/Views/Details.cshtml
@@ -1,14 +1,8 @@
 ﻿@model Storefront.DATA.EF.Models.Genre
 
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h1>Details</h1>
-
-
-    <h3>Genre</h3>
- 
+<div>
+    <h1>@Model.GenreName</h1>
+  
     <dl class="dl-horizontal cute-card">
         <dt>
             @Html.DisplayNameFor(model => model.GenreName)
@@ -25,14 +19,6 @@
     </dl>
 </div>
 <div>
-    @if(User.IsInRole("Admin")){
-    <a>
     <a asp-action="Edit" asp-route-id="@Model.GenreId">Edit</a> |
-  
-        <a asp-action="Delete" asp-route-id="@Model.GenreId">Delete</a> |
- 
-       
-  </a>
-    }
     <a asp-action="Index">Back to List</a>
 </div>
