--- a/Storefront/Views/Genres/Create.cshtml
+++ b/Storefront/Views/Genres/Create.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create a New Genre</h2>
 
-<h4>Genre</h4>
-<hr />
-<div class="row">
+
+
+<div class="row  cute-card">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -22,14 +22,15 @@
                 <input asp-for="GenreDescription" class="form-control" />
                 <span asp-validation-for="GenreDescription" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="form-group ">
+                <input type="submit" value="Create" class="btn btn-default cute-button" />
             </div>
         </form>
+
     </div>
 </div>
 
-<div>
+<div >
     <a asp-action="Index">Back to List</a>
 </div>
 
