--- a/Storefront/Views/Genres/Delete.cshtml
+++ b/Storefront/Views/Genres/Delete.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+<h1>Delete</h1>
+<h3>@Model.GenreName</h3>
+<h2>Are you absolutely sure you want to delete this?</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Genre</h4>
-    <hr />
-    <dl class="dl-horizontal">
+
+    <dl class="dl-horizontal cute-card">
         <dt>
             @Html.DisplayNameFor(model => model.GenreName)
         </dt>
@@ -27,7 +26,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="GenreId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn delete-button" /> 
+        <a asp-action="Index"class="btn cute-button">Back to List</a>
     </form>
 </div>
