--- a/Storefront/Views/Genres/Edit.cshtml
+++ b/Storefront/Views/Genres/Edit.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h1>Edit</h1>
 
-<h4>Genre</h4>
-<hr />
-<div class="row">
+<h3>@Model.GenreName</h3>
+
+<div class="row cute-card" >
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -32,6 +32,7 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
+ 
 </div>
 
 @section Scripts {
