--- a/Storefront/Views/Home/Index.cshtml
+++ b/Storefront/Views/Home/Index.cshtml
@@ -2,51 +2,41 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container background-container">
-    <div class="row mt-5">
+<div class="container mt-5 >
+    <div class="row ">
         <div class="col-md-6">
-            <h1 class="mt-5">Welcome to our Music Record Store!</h1>
-            <p class="lead">Discover a wide collection of music records here!</p>
-            <a href=@Url.ActionLink("TiledIndex", "Records") class=" btn btn-primary btn-lg">Explore Now</a>
-        </div>
-        <div class="col-md-6">
-            @*Add a carousel here later*@
+            <div class="card h-100">
+            <div class="card-body cute-card" >
+            <h1 class="Card-Title">Welcome to our Music Record Store!</h1>
+            <p class="card-text lead">Discover a wide collection of music records here!</p>
+            <a href=@Url.ActionLink("TiledIndex", "Records") class="cute-button">See More</a>
+         </div>
         </div>
     </div>
-
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="..." alt="...">
-                <div class="carousel-caption">
-                    ...
+        <div class="container mt-5">
+            <div class="row ">
+                <div class="col-md-6">
+                    <div class="card h-100">
+                        <div class="card-body cute-card" >
+                            <h1 class="Card-Title">Find Your New Favorite Band.</h1>
+                            <p class="card-text lead">Music library feeling a bit stale? Explore our catalogue of artists, you may discover something new!</p>
+                            <a href=@Url.ActionLink("TiledIndex", "Artists") class="cute-button">See more</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="item">
-                <img src="..." alt="...">
-                <div class="carousel-caption">
-                    ...
-                </div>
-            </div>
-            ...
-        </div>
 
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+                <div class="container mt-5 " >
+                    <div class="row ">
+                        <div class="col-md-12">
+                            <div class="card h-100">
+                                <div class="card-body cute-card">
+                                    <h1 class="Card-Title">Confused? Us too.</h1>
+                                    <p class="card-text lead">Metal has a lot of subgenres! If you want to know more, check out the Genres 
+                                        page for helpful summaries of some of the genres we carry. </p>
+                                    <a href=@Url.ActionLink("Index", "Genres") class="cute-button">See more</a>
+                                </div>
+                            </div>
+                        </div>
+</div>
+</div>
 </div>
